vertical alignment of like count #s was wonky...fixed

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -953,7 +953,7 @@ a#lnk-page-next:hover {
     position:absolute;
     font-size:25px;
     margin-left:-5px;
-    margin-top:0px;
+    margin-top:3px;
     font-weight:800;
     color:red;
 }
